@@ -889,7 +889,7 @@
   </module>
   <module name="gnome-cups-manager">
     <version release="gnome-2.6">
-      <component name="gnome-cups-manager" dir="gnome-cups-manager" group="office">
+      <component name="gnome-cups-manager" dir="gnome-cups-manager" group="extras">
         <podir dir="po"/>
         <potname name="gnome-cups-manager.pot"/>
         <branch name="HEAD"/>
@@ -1701,7 +1701,7 @@
   </module>
   <module name="libgnomecups">
     <version release="gnome-2.6">
-      <component name="libgnomecups" dir="libgnomecups" group="office">
+      <component name="libgnomecups" dir="libgnomecups" group="extras">
 	<podir dir="po"/>
 	<potname name="libgnomecups.pot"/>
 	<branch name="HEAD"/>
@@ -2179,7 +2179,7 @@
       <component name="rhythmbox" dir="rhythmbox" group="extras">
 	<podir dir="po"/>
 	<potname name="rhythmbox.pot"/>
-	<branch name="HEAD"/>
+	<branch name="RHYTHMBOX-0_6"/>
 	<regenerate/>
 	<download/>
       </component>
