@@ -1,3 +1,8 @@
+2003-11-28  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Moved libgnomecups/gnome-cups-manager back
+	to extras, fixed branch information for rhythmbox.
+
 2003-11-26  Ole Laursen  <olau@hardworking.dk>
 
 	* translation-status.xml: Moved sound-juicer to Fifth Toe, gcm and
